--- a/em_logimpex/views/eml_expedientes.xml
+++ b/em_logimpex/views/eml_expedientes.xml
@@ -18,7 +18,6 @@
                 <field name="end_date" />
                 <field name="partner_id" optional="show" />
                 <field name="responsable_id" optional="show" options="{'no_create': True}" />
-                <field name="ref" optional="show" />
                 <field name="load" optional="show" options="{'no_create': True}" />
                 <field name="unload" optional="show" options="{'no_create': True}" />
                 <field name="master" optional="show" />
@@ -34,7 +33,21 @@
         <field name="model">eml.expedientes</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <button name="action_create_project_analytic_account" string="Crear Proyecto y Cuenta Analítica" type="object" class="oe_highlight" attrs="{'invisible': [('more_info', '=', True)]}"/>
+                </header>
                 <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button class="oe_stat_button" type="object" name="action_view_projects" icon="fa-book" attrs="{'invisible': [('expedientes_count', '=', 0)]}">
+                            <field string="Proyectos" name="expedientes_count" widget="statinfo"/>
+                        </button>
+                        <button class="oe_stat_button" type="object" name="action_view_invoices" icon="fa-pencil-square-o" attrs="{'invisible': [('facturas_count', '=', 0)]}">
+                            <field string="Facturas" name="facturas_count" widget="statinfo"/>
+                        </button>
+                        <button class="oe_stat_button" type="object" name="action_view_payments" icon="fa-credit-card" attrs="{'invisible': [('pagos_count', '=', 0)]}">
+                            <field string="Pagos" name="pagos_count" widget="statinfo"/>
+                        </button>
+                    </div>
                     <group>
                         <div class="oe_title">
                             <h1>
@@ -44,8 +57,7 @@
                     </group>
                     <group name="info" cols="2" string="Datos Generales">
                         <group name="info_left">
-                            <field name="active" invisible="1" />
-                            <field name="create_date" />
+                            <field name="create_date" string="Emisión" />
                             <field name="operation_type" options="{'no_create': True}" />
                             <field name="service_type" />
                             <field name="move_type" />
@@ -66,7 +78,6 @@
                             <field name="invoice_partner_id" />
                             <field name="vendor_id" domain="[('category_id', '=', 'Vendedor')]" />
                             <field name="responsable_id" widget="many2one_avatar_user" options="{'no_create': True}" />
-                            <field name="ref" />
                             <field name="pickup" />
                             <field name="delivery" />
                             <field name="load" options="{'no_create': True}" />
@@ -84,7 +95,7 @@
                     <group name="info2" cols="2" string="Datos Adicionales">
                         <group name="info2_left">
                             <field name="agent_mx_id" options="{'no_create': True}" domain="[('category_id', '=', 'Agente')]" />
-                            <field name="buque_id" />
+                            <field name="buque_id" options="{'no_create': True}" />
                             <field name="travel_id" />
                             <field name="internal_ref" />
                             <field name="external_ref" />
@@ -99,6 +110,11 @@
                                 <field name="containers_line" widget="one2many" nolabel="1" />
                             </group>
                         </page>
+<!--                        <page string="Asientos Contables" name="containers">-->
+<!--                            <group name="account_move_lines">-->
+<!--                                <field name="account_move_lines" widget="one2many" domain="[('partner_id', '=', 'partner_id')]" />-->
+<!--                            </group>-->
+<!--                        </page>-->
                         <page string="Documentación" name="expedientes_docs_root">
                             <group name="expedientes_docs">
                                 <group name="expedientes_docs_left">
@@ -113,8 +129,10 @@
                                 </group>
                             </group>
                         </page>
-                        <page string="Informacion Adicional" name="more_info">
+                        <page string="Información Adicional" name="more_info">
                             <group>
+                                <field name="active" invisible="1" />
+                                <field name="more_info" invisible="1" />
                                 <field name="project_id" options="{'no_create': True}"/>
                                 <field name="account_analytic_id" options="{'no_create': True}" />
                             </group>
@@ -135,9 +153,12 @@
             <search string="Expedientes">
                 <field name="name" />
                 <field name="partner_id" />
-                <field name="ref" />
                 <field name="master" />
                 <field name="house" />
+                <field name="buque_id" />
+                <field name="travel_id" />
+                <field name="internal_ref" />
+                <field name="external_ref" />
                 <field name="note" />
                 <separator />
                 <filter string="Cargo" name="service_type" domain="[('service_type', '=', 'load')]" />
