--- a/em_logimpex/report/transferencia_form.xml
+++ b/em_logimpex/report/transferencia_form.xml
@@ -3,7 +3,7 @@
     <template id="report_transferencia_form">
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="o">
-                <t t-call="web.external_layout" t-lang="o.solicitante_id.lang">
+                <t t-call="web.external_layout" t-name="em_logimpex.report_transferencia_form" t-lang="o.solicitante_id.lang">
                     <div class="page">
                         <div class="oe_structure" />
                         <h2 class="mt16">
@@ -107,8 +107,8 @@
                             </div>
                         </div>
                         <br />
-                            <div style="position:absolute;top:850px; page-break-inside: avoid;">
-                                <div class="row">
+                        <div style="position:absolute;top:850px; page-break-inside: avoid;">
+                            <div class="row">
                                 <div class="col-4">
                                     <span>
                                         <strong>Solicitante:</strong>
