--- a/em_logimpex/report/transferencia_form.xml
+++ b/em_logimpex/report/transferencia_form.xml
@@ -14,19 +14,21 @@
                         </h2>
                         <br />
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-4">
                                 <span>
                                     <strong>Fecha de Elaboración:</strong>
                                     <br />
                                 </span>
                                 <span t-field="o.create_date" />
                             </div>
-                            <div class="col-6">
+                            <div class="col-4">
                                 <span>
                                     <strong>Fecha de Programada de Pago:</strong>
                                     <br />
                                 </span>
                                 <span t-field="o.fecha_pago" />
+                            </div>
+                            <div class="4">
                             </div>
                         </div>
                         <br />
@@ -62,14 +64,28 @@
                                 </span>
                                 <span t-field="o.partner_id_acc_bank" />
                             </div>
-                            <div class="col-4">
+                            <div class="col-2">
+                                <span>
+                                    <strong>ABM/ABA:</strong>
+                                    <br />
+                                </span>
+                                <span t-field="o.partner_id_accounts.bank_id.l10n_mx_edi_code" />
+                            </div>
+                            <div class="col-2">
+                                <span>
+                                    <strong>BIC/SWIFT:</strong>
+                                    <br />
+                                </span>
+                                <span t-field="o.partner_id_accounts.bank_id.bic" />
+                            </div>
+                            <div class="col-2">
                                 <span>
                                     <strong>Cuenta:</strong>
                                     <br />
                                 </span>
                                 <span t-field="o.partner_id_acc_number" />
                             </div>
-                            <div class="col-4">
+                            <div class="col-2">
                                 <span>
                                     <strong>CLABE:</strong>
                                     <br />
@@ -79,21 +95,47 @@
                         </div>
                         <br />
                         <div class="row">
-                            <div class="col-5">
+                            <div class="col-6">
+                                <span>
+                                    <strong>Dirección:</strong>
+                                    <br />
+                                </span>
+                                <span t-field="o.partner_id_accounts.bank_id.street" /> <span t-field="o.partner_id_accounts.bank_id.street2" />, <span t-field="o.partner_id_accounts.bank_id.zip" />
+                                <br />
+                                <span t-field="o.partner_id_accounts.bank_id.city" />, <span t-field="o.partner_id_accounts.bank_id.state" />, <span t-field="o.partner_id_accounts.bank_id.country" />
+                            </div>
+                            <div class="col-3">
+                                <span>
+                                    <strong>Teléfono:</strong>
+                                    <br />
+                                </span>
+                                <span t-field="o.partner_id_accounts.bank_id.phone" />
+                            </div>
+                            <div class="col-3">
+                                <span>
+                                    <strong>Email:</strong>
+                                    <br />
+                                </span>
+                                <span t-field="o.partner_id_accounts.bank_id.email" />
+                            </div>
+                        </div>
+                        <br />
+                        <div class="row">
+                            <div class="col-4">
                                 <span>
                                     <strong>Monto a Transferir:</strong>
                                     <br />
                                 </span>
                                 <span t-field="o.monto" /> <span t-field="o.partner_id_acc_currency" />
                             </div>
-                            <div class="col-5">
+                            <div class="col-4">
                                 <span>
                                     <strong>Monto del Anticipo:</strong>
                                     <br />
                                 </span>
                                 <span t-field="o.anticipo_monto" /> <span t-field="o.anticipo_currency_id" />
                             </div>
-                            <div class="col-2">
+                            <div class="col-4">
                                 <span>
                                     <strong>Anticipo:</strong>
                                     <br />
@@ -105,9 +147,29 @@
                                     <input type="checkbox" id="anticipo_checkbox" />
                                 </t>
                             </div>
+                            <div class="4">
+                            </div>
                         </div>
                         <br />
-                        <div style="position:absolute;top:850px; page-break-inside: avoid;">
+                        <div class="row">
+                            <div class="col-6">
+                                <span>
+                                    <strong>Concepto:</strong>
+                                    <br />
+                                </span>
+                                <span t-field="o.concept" />
+                            </div>
+                            <div class="col-6">
+                                <span>
+                                    <strong>Expediente:</strong>
+                                    <br />
+                                </span>
+                                <span t-field="o.eml_expediente" />
+                            </div>
+                        </div>
+                        <br />
+                        <!--                        <div style="position:absolute;top:850px; page-break-inside: avoid;">-->
+                        <div style="page-break-inside: avoid;">
                             <div class="row">
                                 <div class="col-4">
                                     <span>
@@ -117,7 +179,7 @@
                                     <div class="signature">
                                         <br />
                                         <br />
-                                        <div>__________________________________________</div>
+                                        <div>________________________</div>
                                         <div>
                                             <span t-field="o.solicitante_id.name" />
                                         </div>
@@ -128,17 +190,16 @@
                                         <strong>Autorización Nivel 1:</strong>
                                         <br />
                                     </span>
-                                    <br />
+                                    <div>
+                                        <span t-field="o.auth_user1.name" />
+                                    </div>
                                     <div class="signature">
                                         <t t-if="o.auth_check1">
-                                            <input type="checkbox" id="auth_check1_checkbox" checked="checked" />
+                                            <input type="checkbox" class="btn-check" id="auth_check1_checkbox" checked="checked" />
                                         </t>
                                         <t t-if="not o.auth_check1">
-                                            <input type="checkbox" id="auth_check1_checkbox" />
+                                            <input type="checkbox" class="btn-check" id="auth_check1_checkbox" />
                                         </t>
-                                        <div>
-                                            <span t-field="o.auth_user1.name" />
-                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-4">
@@ -146,7 +207,9 @@
                                         <strong>Autorización Nivel 2:</strong>
                                         <br />
                                     </span>
-                                    <br />
+                                    <div>
+                                        <span t-field="o.auth_user2.name" />
+                                    </div>
                                     <div class="signature">
                                         <t t-if="o.auth_check2">
                                             <input type="checkbox" id="auth_check2_checkbox" checked="checked" />
@@ -154,9 +217,6 @@
                                         <t t-if="not o.auth_check2">
                                             <input type="checkbox" id="auth_check2_checkbox" />
                                         </t>
-                                        <div>
-                                            <span t-field="o.auth_user2.name" />
-                                        </div>
                                     </div>
                                 </div>
                             </div>
